@@ -311,3 +311,8 @@
 2012-01-26  Cedric Bail
 
 	* Add min: SOURCE, max: SOURCE.
+
+2012-02-03  Jihoon Kim
+
+	* Entry: Fix to work edje_object_part_text_input_panel_enabled_set/get well
+             even though ecore_imf doesn't exist or immodule isn't used.
